Added Validtaion to the StudentInputClass

--- a/Views/Shared/_CustomLayout.cshtml
+++ b/Views/Shared/_CustomLayout.cshtml
@@ -25,6 +25,7 @@
                     <li>@Html.ActionLink("EducationInput", "EducationInput", "Profile", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("ProjectInput", "ProjectInput", "Profile", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("ProjectInputModelBinding", "ProjectInputModelBinding", "Profile", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("StudentInput", "StudentInput", "Profile", new { area = "" }, new { @class = "nav-link" })</li>
                 </ul>
             </div>
         </div>
